--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>안녕하세요 페이지</title>
-    <title>2222222</title>
-
 </head>
 <body>
     <h1>안녕하세요</h1>
+    <h1>안녕하세요 테스트 중입니다.</h1>
+    
 </body>
 </html>
